Fixed grid gaps and margins in overiew

--- a/style.scss
+++ b/style.scss
@@ -268,11 +268,19 @@ nav {
 
 #overview {
   .container {
+    @media(max-width:1000px) {
+      margin-bottom: 3rem;
+    }
+
     .section-title {
       margin-bottom: 1.4rem;
 
       h2 {
         color: $dark-grayish-blue;
+      }
+
+      @media(max-width:1000px) {
+        margin-bottom: 2rem;
       }
     }
 
@@ -287,7 +295,7 @@ nav {
       @media(max-width:1000px) {
         grid-template-columns: 1fr;
         grid-template-rows: unset;
-        grid-gap: 10px;
+        grid-gap: 16px;
       }
 
       .card {
